--- a/css/main.css
+++ b/css/main.css
@@ -23,13 +23,6 @@ body {
           align-items: center;
 }
 
-@media screen and (max-width: 375px) {
-  body {
-    min-width: 375px;
-    min-height: 667px;
-  }
-}
-
 .card {
   background-color: #14253d;
   border-radius: 20px;
@@ -96,7 +89,7 @@ body {
 }
 
 .card__balance-text {
-  margin-left: 7px;
+  margin-left: 0.4em;
 }
 
 .card__time-left {
@@ -110,7 +103,7 @@ body {
 }
 
 .card__time-left-text {
-  margin-left: 6px;
+  margin-left: 0.4em;
   font-size: 0.9em;
 }
 
@@ -118,7 +111,7 @@ body {
   background: #2f415b;
   height: 1px;
   border: 0px;
-  margin-bottom: 18px;
+  margin-bottom: 1em;
 }
 
 .card__creator {
@@ -144,4 +137,34 @@ body {
 
 .card__creator-text span {
   color: white;
+}
+
+@media screen and (max-width: 375px) {
+  body {
+    min-width: 375px;
+    min-height: 667px;
+  }
+  .card {
+    width: 328px;
+    height: 544px;
+  }
+  .card__title {
+    margin-top: 0.8em;
+    margin-bottom: 0.6em;
+  }
+  .card__text {
+    font-size: 0.9em;
+    line-height: 1.6em;
+  }
+  .card__balance-and-time-left {
+    margin-top: 0.8em;
+    margin-bottom: 0.8em;
+  }
+  .card__creator-text {
+    font-size: 0.85em;
+  }
+  .card__time-left-text {
+    margin-left: 0.7em;
+    font-size: 0.8em;
+  }
 }
