--- a/css/main.css
+++ b/css/main.css
@@ -32,9 +32,9 @@ body {
 
 .card {
   background-color: #14253d;
-  border-radius: 20px;
+  border-radius: 15px;
   width: 350px;
-  height: 600px;
+  height: 596px;
   padding: 25px;
   font-family: "Outfit", sans-serif;
   font-size: 18px;
@@ -73,7 +73,7 @@ body {
 .card__main-img-bg {
   position: absolute;
   width: 100%;
-  border-radius: 10px;
+  border-radius: 8px;
 }
 
 .card__main-img-top {
@@ -138,7 +138,7 @@ body {
 @media screen and (max-width: 375px) {
   .card__balance-and-time-left {
     margin-top: 0.8em;
-    margin-bottom: 0.8em;
+    margin-bottom: 1em;
   }
 }
 
@@ -191,6 +191,12 @@ body {
   height: 1px;
   border: 0px;
   margin-bottom: 1em;
+}
+
+@media screen and (max-width: 375px) {
+  .card__hr {
+    margin-bottom: 0.8em;
+  }
 }
 
 .card__creator {
